--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -35,6 +35,7 @@
                                 Margin="0,0,0,0"
                                 BorderBrush="{DynamicResource MahApps.Brushes.Accent}"
                                 BorderThickness="0,4,0,0"
+                                Panel.ZIndex="1000"
                                 IsHitTestVisible="False">
                                 <Grid>
                                     <Border
@@ -56,8 +57,6 @@
                                 </Grid>
                             </Border>
                             <ControlTemplate.Triggers>
-
-                                
                                 <MultiDataTrigger>
                                     <MultiDataTrigger.Conditions>
                                         <Condition Binding="{Binding RibbonState, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type syncfusion:Ribbon}}}" Value="Hide" />
@@ -87,6 +86,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -109,6 +109,17 @@
 
         </fluent:Ribbon>
 
+        <!--  Grey Bar for the top -->
+        <Border
+            Height="3"
+            Margin="0,-33,0,0"
+            BorderThickness="0,1,0,0"
+            Background="{DynamicResource ContentBackgroundAlt2}"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="top"
+            Panel.ZIndex="0"
+             />
+        
         <syncfusion:Ribbon
             x:Name="_ribbon"
             Margin="60,0,0,0"
@@ -124,7 +135,6 @@
             VerticalAlignment="Top"
             BorderThickness="0"
             >
-
             <!--<syncfusion:Ribbon.QuickAccessToolBar>
                 <syncfusion:QuickAccessToolBar Margin="65,0,0,0" />
             </syncfusion:Ribbon.QuickAccessToolBar>-->
@@ -172,7 +182,7 @@
                                 IconStretch="Fill"
                                 IconType="Icon"
                                 Label="Search Options"
-                                Margin="8,0"
+                                Margin="0,0"
                                 SizeForm="Large"
                                 HorizontalAlignment="Left">
 
@@ -286,10 +296,10 @@
                         </syncfusion:RibbonBar>
 
                         <!--  View bar  -->
-                        <syncfusion:RibbonBar
+                        <!--syncfusion:RibbonBar
                             Name="ABViewActions"
                             Width="auto"
-                            Header="View">
+                            Header="View"-->
 
                             <!--  Expand All Folders  --><!--
                             <syncfusion:RibbonButton
@@ -379,7 +389,7 @@
                                 </syncfusion:RibbonButton.IconTemplate>
                             </syncfusion:RibbonButton>-->
                             
-                        </syncfusion:RibbonBar>
+                        <!--/syncfusion:RibbonBar-->
                         
                     </syncfusion:RibbonTab>
 
@@ -1677,10 +1687,10 @@
                 </syncfusion:RibbonBar>
                 
                 <!--  Utilities bar  -->
-                <syncfusion:RibbonBar
+                <!--syncfusion:RibbonBar
                     Name="Utilities"
                     Width="auto"
-                    Header="Utilities">
+                    Header="Utilities"-->
 
                     <!--  Plugin Manager Button  -->
                     <!--<syncfusion:RibbonButton
@@ -1702,7 +1712,7 @@
                         </syncfusion:RibbonButton.IconTemplate>
                     </syncfusion:RibbonButton>-->
 
-                </syncfusion:RibbonBar>
+                <!--/syncfusion:RibbonBar-->
 
             </syncfusion:RibbonTab>
 
@@ -1862,7 +1872,18 @@
             VerticalAlignment="top"
             Background="{DynamicResource ContentBackgroundAlt2}"
              />
-        
+
+        <!--  Extra little line under Sammy -->
+        <Border
+            Width="60"
+            Height="28"
+            Margin="0,38,0,0"
+            BorderThickness="0,0,0,1"
+            BorderBrush="#373737"
+            HorizontalAlignment="Left"
+            VerticalAlignment="top"
+             />
+
         <!--  Sammy Container  -->
         <Grid
             Background="{DynamicResource ContentBackgroundAlt2}"
