--- a/WolvenKit/Views/Tools/ImportExportView.xaml
+++ b/WolvenKit/Views/Tools/ImportExportView.xaml
@@ -234,14 +234,14 @@
                         Style="{DynamicResource ButtonCustom}">
                         <StackPanel Orientation="Horizontal">
                             <iconPacks:PackIconCodicons
-                                    Width="16"
-                                    Height="16"
+                                    Width="13"
+                                    Height="13"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Margin="2"
                                     Kind="DebugStart" />
 
-                            <TextBlock Text="Process Selected" />
+                            <TextBlock Text="Process Selected" Margin="1"/>
                         </StackPanel>
                     </Button>
 
@@ -257,14 +257,14 @@
                         Style="{DynamicResource ButtonCustom}">
                         <StackPanel Orientation="Horizontal">
                             <iconPacks:PackIconCodicons
-                                Width="16"
-                                Height="16"
+                                Width="13"
+                                Height="13"
                                 HorizontalAlignment="Center"
                                 VerticalAlignment="Center"
                                 Margin="2"
                                 Kind="RunAll" />
 
-                            <TextBlock Text="Process All" />
+                            <TextBlock Text="Process All" Margin="1"/>
                         </StackPanel>
                     </Button>
 
@@ -324,20 +324,21 @@
                             Style="{DynamicResource ButtonCustom}">
                             <StackPanel Orientation="Horizontal">
                                 <iconPacks:PackIconForkAwesome
-                                    Width="16"
-                                    Height="16"
+                                    Width="13"
+                                    Height="13"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center"
                                     Margin="2"
                                     Kind="FilesOutline" />
-                                <TextBlock Text="Copy Settings" />
+                                <TextBlock Text="Copy Settings" Margin="1" />
                             </StackPanel>
                         </Button>
                         <syncfusion:ComboBoxAdv
                             x:Name="ToThese"
-                            Margin="6,0,0,0"
+                            Margin="0,0,0,0"
                             VerticalAlignment="Center"
                             FontSize="12"
+                            Padding="6,6,0,6"
                             ToolTip="Destination for copied settings"
                             SelectedIndex="0"
                             Text="apply">
